Custom--app/main/default/objects/Yardi_Rent_Roll__c/Yardi_Rent_Roll__c.object-meta.xml
<CustomObject>
    <description>This is a once daily feed from Yardi to capture "point in time" of the daily rent roll for each property.</description>
    <label>Yardi Rent Roll</label>
    <nameField>
        <displayFormat>YRR-{00000000}</displayFormat>
        <label>Yardi Rent Roll Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yardi Rent Roll</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>