Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Asking_Rent_First_Lease__c.field-meta.xml
<CustomField>
    <fullName>Asking_Rent_First_Lease__c</fullName>
    <label>Asking Rent @ First Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>