Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Current_Tenant_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Tenant_Status__c</fullName>
    <label>Current Tenant Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>