Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Current_Unit_status__c.field-meta.xml
<CustomField>
    <fullName>Current_Unit_status__c</fullName>
    <label>Current Unit status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>