Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Lease_Period_End_Current_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Lease_Period_End_Current_Tenant__c</fullName>
    <label>Current Tenant Lease Period End</label>
    <type>Date</type>
</CustomField>