Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Lease_TIP_Status__c.field-meta.xml
<CustomField>
    <fullName>Lease_TIP_Status__c</fullName>
    <label>Lease TIP Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>