Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Make_Ready_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Make_Ready_Start_Date__c</fullName>
    <label>Make Ready Start Date</label>
    <type>Date</type>
</CustomField>