Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Market_Rent__c.field-meta.xml
<CustomField>
    <fullName>Market_Rent__c</fullName>
    <label>Market Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>