Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Month_to_Month__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Month__c</fullName>
    <label>Month to Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>