Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Date__c</fullName>
    <label>Move Out Date</label>
    <type>Date</type>
</CustomField>