Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Net_Effective_Rent__c.field-meta.xml
<CustomField>
    <fullName>Net_Effective_Rent__c</fullName>
    <label>Net Effective Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>