Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Over_Under_asking_Rent__c.field-meta.xml
<CustomField>
    <fullName>Over_Under_asking_Rent__c</fullName>
    <label>Over(Under) asking Rent %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>