Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Yardi Rent Roll</relationshipLabel>
    <relationshipName>Yardi_Rent_Roll</relationshipName>
    <type>Lookup</type>
</CustomField>