Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Manager__c</fullName>
    <label>Portfolio Manager</label>
    <length>40</length>
    <type>Text</type>
</CustomField>