Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Code__c</fullName>
    <formula>Portfolio__r.Yardi_Property_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Code</label>
    <type>Text</type>
</CustomField>