Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/SameStore__c.field-meta.xml
<CustomField>
    <fullName>SameStore__c</fullName>
    <description>This value will be populated via Yardi feed.</description>
    <label>Same Store</label>
    <length>20</length>
    <type>Text</type>
</CustomField>