Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Unit_Rental_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Rental_Type__c</fullName>
    <label>Unit Rental Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>