Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <label>Unit Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>