Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Weeks_in_Proces__c.field-meta.xml
<CustomField>
    <fullName>Weeks_in_Proces__c</fullName>
    <formula>IF(TODAY() - Lease_Period_Start_Current_Tenant__c &lt;= 14, '1-15 Days (1-2 Weeks)', 
IF(TODAY() - Lease_Period_Start_Current_Tenant__c&lt;= 28, '16-30 Days (3-4 Weeks)', 
IF(TODAY() - Lease_Period_Start_Current_Tenant__c &lt;= 42, '31-45 Days (5-6 Weeks)', 
IF(TODAY() - Lease_Period_Start_Current_Tenant__c &lt;= 56, '46-60 Days (7-8 Weeks)', 
IF(TODAY() - Lease_Period_Start_Current_Tenant__c &lt;= 70, '61-75 Days (9-10 Weeks)', 
IF(TODAY() - Lease_Period_Start_Current_Tenant__c >= 71, '76+ Days (11-12+ Weeks)', 
NULL))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks in Proces</label>
    <type>Text</type>
</CustomField>