Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Yardi_Make_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Make_Ready_Date__c</fullName>
    <label>Yardi Make Ready Date</label>
    <type>Date</type>
</CustomField>