Custom--app/main/default/objects/Yardi_Rent_Roll__c/fields/Yardi_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Property_Code__c</fullName>
    <externalId>true</externalId>
    <label>Yardi Property Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>