Custom--app/main/default/objects/Yardi_Rent_Roll__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Property_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Portfolio_Manager__c</columns>
    <columns>Current_Tenant_Status__c</columns>
    <columns>Lease_TIP_Status__c</columns>
    <columns>Unit_Rental_Type__c</columns>
    <columns>Unit_Status__c</columns>
    <columns>Market__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>