Custom--app/main/default/objects/Yardi_Rent_Roll__c/listViews/All_MTM.listView-meta.xml
<ListView>
    <fullName>All_MTM</fullName>
    <columns>NAME</columns>
    <columns>Month_to_Month__c</columns>
    <columns>Unit_Rental_Type__c</columns>
    <columns>Unit_Status__c</columns>
    <columns>Yardi_Property_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Month_to_Month__c</field>
        <operation>contains</operation>
        <value>MTM</value>
    </filters>
    <label>All MTM</label>
</ListView>