Custom--app/main/default/objects/Yardi_Rent_Roll__c/listViews/All_Phoenix.listView-meta.xml
<ListView>
    <fullName>All_Phoenix</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Portfolio_Manager__c</columns>
    <columns>Current_Tenant_Status__c</columns>
    <columns>Unit_Rental_Type__c</columns>
    <columns>Unit_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Phoenix</value>
    </filters>
    <label>All - Phoenix</label>
</ListView>