Custom--app/main/default/objects/Yardi_Rent_Roll__c/listViews/All_Residential_Vacant.listView-meta.xml
<ListView>
    <fullName>All_Residential_Vacant</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Property_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Portfolio_Manager__c</columns>
    <columns>Current_Tenant_Status__c</columns>
    <columns>Lease_TIP_Status__c</columns>
    <columns>Unit_Rental_Type__c</columns>
    <columns>Unit_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Tenant_Status__c</field>
        <operation>equals</operation>
        <value>Vacant</value>
    </filters>
    <label>All Residential - Vacant</label>
</ListView>