Custom--app/main/default/objects/Yardi_Rent_Roll__c/listViews/MN_and_Chicago.listView-meta.xml
<ListView>
    <fullName>MN_and_Chicago</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Property_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Portfolio_Manager__c</columns>
    <columns>Current_Tenant_Status__c</columns>
    <columns>Lease_TIP_Status__c</columns>
    <columns>Unit_Rental_Type__c</columns>
    <columns>Unit_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Chicago,Minneapolis</value>
    </filters>
    <label>MN and Chicago</label>
</ListView>